--- a/Source/Grafana-Promtail/positions.yaml
+++ b/Source/Grafana-Promtail/positions.yaml
@@ -1,2 +1,2 @@
 positions:
-  C:\Users\JEF\Documents\GitHub\Grafana-Loki-Example\Python Logger\app1.log: "53478"
+  C:\Users\JEF\Documents\GitHub\Grafana-Loki-Example\Source\Python Logger\app1.log: "78362"
